[package]
name = "node-meminfo"
version = "2.0.6"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/node-meminfo"
homepage = "https://magiclen.org/node-meminfo/"
keywords = ["node.js", "meminfo"]
categories = []
description = "Get memory information on Linux."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
scanner-rust = "2"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
