[package]
name = "node-meminfo"
version = "3.0.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.57"
repository = "https://github.com/magiclen/node-meminfo"
homepage = "https://magiclen.org/node-meminfo/"
keywords = ["node.js", "meminfo", "free"]
categories = []
description = "Get memory information on Linux."
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
napi = "2"
napi-derive = "2"

scanner-rust = "2"

[build-dependencies]
napi-build = "2"